[gd_scene load_steps=11 format=3 uid="uid://3rpms67uyk34"]

[ext_resource type="PackedScene" path="res://Actors/Player.tscn" id="1"]
[ext_resource type="PackedScene" path="res://Actors/Computer.tscn" id="2"]
[ext_resource type="PackedScene" path="res://Components/MasterInterface.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://cxynyr0jl1dkp" path="res://assets/Sketch28013956.jpg" id="4"]
[ext_resource type="PackedScene" path="res://Actors/Terror.tscn" id="5"]
[ext_resource type="Script" uid="uid://bwbnqh8nnv6a2" path="res://Screens/Level01.gd" id="6"]
[ext_resource type="PackedScene" path="res://Actors/Portal.tscn" id="7"]
[ext_resource type="FontFile" uid="uid://coqqyvx6iyhwp" path="res://assets/Orbitron-VariableFont_wght.ttf" id="8"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("8")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Theme" id="2"]
default_font = SubResource("1")

[node name="Node2D" type="Node2D"]
position = Vector2(51, 0)
script = ExtResource("6")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4")
expand_mode = 1

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
process_priority = 2

[node name="MasterInterface" parent="InterfaceLayer" instance=ExtResource("3")]
layout_mode = 3
anchors_preset = 15
offset_top = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="Win" type="ColorRect" parent="InterfaceLayer"]
process_priority = 8
visible = false
offset_left = 1.0
offset_right = 1066.0
offset_bottom = 641.0

[node name="Label" type="Label" parent="InterfaceLayer/Win"]
layout_mode = 0
offset_left = 323.0
offset_top = 278.0
offset_right = 797.0
offset_bottom = 404.0
theme = SubResource("2")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "You Win!"

[node name="Player" parent="." instance=ExtResource("1")]
position = Vector2(47, 289)

[node name="Computer" parent="." instance=ExtResource("2")]
process_mode = 3
position = Vector2(-102, 302)
input_pickable = true

[node name="Terror" parent="." instance=ExtResource("5")]
position = Vector2(67, 326)

[node name="Terror1" parent="." instance=ExtResource("5")]
position = Vector2(94, 284)

[node name="Terror2" parent="." instance=ExtResource("5")]
position = Vector2(21, 246)

[node name="Terror3" parent="." instance=ExtResource("5")]
position = Vector2(-6, 283)

[node name="Terror4" parent="." instance=ExtResource("5")]
position = Vector2(15, 325)

[node name="Terror5" parent="." instance=ExtResource("5")]
position = Vector2(72, 245)

[node name="Portal" parent="." instance=ExtResource("7")]
visible = false
position = Vector2(979, 360)
